--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,13 +1,57 @@
 @use 'base';
 
-html,
-body {
-	padding: 0;
-	margin: 0;
-}
-
 * {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
 	scroll-padding-top: 10rem;
+	color: base.$blue;
+	padding: 0;
+	margin: 0;
+}
+
+// sections
+section {
+	margin: 100px 0;
+}
+
+.sectionContainer {
+	width: 1440px;
+	max-width: 90vw;
+	margin: 0 auto;
+}
+
+// fonts
+p {
+	line-height: 1.5;
+	margin: 0;
+}
+
+h1 {
+	font-size: 4rem;
+}
+
+h2 {
+	font-size: 3rem;
+	margin-bottom: 3rem;
+}
+
+h3 {
+	font-size: 1.5rem;
+}
+
+h4 {
+	font-size: 1rem;
+	font-weight: 600;
+	letter-spacing: 2.5px;
+	text-transform: uppercase;
+	margin-bottom: 1.5rem;
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 768px) {
+	.sectionContainer {
+		max-width: 80vw;
+	}
 }
