--- a/components/Slider.module.scss
+++ b/components/Slider.module.scss
@@ -53,7 +53,7 @@
 
 @media screen and (max-width: 1440px) {
 	.sliderItem {
-		width: calc(((90vw - (3 * 5vw)) / 4));
+		width: calc(((90vw - (3 * 2rem)) / 4));
 		margin-right: 2rem;
 	}
 }
