--- a/components/Contact.module.scss
+++ b/components/Contact.module.scss
@@ -51,6 +51,7 @@
 		textarea {
 			grid-column: span 12;
 			aspect-ratio: 5 / 1;
+			resize: none;
 		}
 
 		button {
@@ -59,6 +60,7 @@
 			font-family: inherit;
 			font-size: inherit;
 			grid-column: span 12;
+			width: fit-content;
 		}
 	}
 }
