--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,7 +3,7 @@
 * {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
-	scroll-padding-top: 10rem;
+	// scroll-padding-top: 10rem;
 	color: base.$blue;
 	padding: 0;
 	margin: 0;
@@ -35,6 +35,7 @@ a {
 
 h1 {
 	font-size: 4rem;
+	margin-bottom: 2rem;
 }
 
 h2 {
@@ -65,6 +66,10 @@ h4 {
 
 	.sectionContainer {
 		max-width: 80vw;
+	}
+
+	h1 {
+		font-size: 3rem;
 	}
 
 	h2 {
