--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,7 +3,7 @@
 * {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
-	// scroll-padding-top: 10rem;
+	scroll-padding-top: 100px;
 	color: base.$blue;
 	padding: 0;
 	margin: 0;
