--- a/components/homepage/Hero.module.scss
+++ b/components/homepage/Hero.module.scss
@@ -1,7 +1,7 @@
 @use '@/app/base';
 
 .hero {
-	padding: 0;
+	padding: 105px 0 0 0;
 	margin-bottom: 100px;
 	min-height: 100vh;
 	// height: 100vh;
