--- a/components/about/AboutHero.module.scss
+++ b/components/about/AboutHero.module.scss
@@ -3,7 +3,7 @@
 .hero {
 	height: 100vh;
 	min-height: fit-content;
-	padding: 96px 0 0 0;
+	padding: 96px 0 50px 0;
 	// margin-bottom: 100px;
 	background-color: white;
 	position: relative;
