Added Product page.

--- a/components/EquipmentMenu.module.scss
+++ b/components/EquipmentMenu.module.scss
@@ -72,7 +72,7 @@
 		background-color: inherit;
 
 		.equipmentButton {
-			background-color: inherit;
+			background-color: base.$yellow;
 		}
 	}
 }
